examples/error/failSemicolon.kl
@Use("java")
public void main() {
    integer x = 10
    return;
}